--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "bin": { "ripple": "./bin/ripple" },
   "main": "./lib/index",
   "dependencies": {
-    "express": "3.1.0",
+    "express": "~4.10.8",
     "connect-xcors": "0.5.2",
     "request": "2.12.0",
     "colors" : "0.6.0-1",
